Set up swagger ui, added test controller to test swagger functionality(to be deleted), added swagger link to README.md

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=syncmeet
+server.port=8080
+springdoc.swagger-ui.path=/swagger-ui/api-docs.html
+springdoc.paths-to-match=/api/**
