--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -81,7 +81,7 @@
 	</build>
 	<repositories>
 		<repository>
-			<id/>
+			<id>central</id>
 			<url>https://repo.maven.apache.org/maven2/</url>
 		</repository>
 	</repositories>
