Added model, dto, repository, service and controller with full CRUD operations for User entity.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -23,10 +23,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-oauth2-client</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
@@ -60,6 +56,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.0</version>
+		</dependency>
 	</dependencies>
 
 
@@ -81,7 +82,7 @@
 	</build>
 	<repositories>
 		<repository>
-			<id/>
+			<id>central</id>
 			<url>https://repo.maven.apache.org/maven2/</url>
 		</repository>
 	</repositories>
