--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=syncmeet
-server.port=8080
+server.port=8090
 springdoc.swagger-ui.path=/swagger-ui/api-docs.html
 springdoc.paths-to-match=/api/**
+spring.datasource.url=jdbc:postgresql://localhost:5432/SyncMeet
+spring.datasource.username=postgres
+spring.datasource.password=almevitaminira
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
