--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build and Push Docker image to Amazon ECR
+        working-directory: ./backend
         run: |
           ECR_REGISTRY=471112874945.dkr.ecr.eu-central-1.amazonaws.com
           ECR_REPOSITORY=syncmeet
@@ -56,4 +57,4 @@ jobs:
         run: docker rm -f syncmeet
 
       - name: Run docker container
-        run: docker run -d -p 8080:8080 --restart on-failure --name syncmeet 471112874945.dkr.ecr.eu-central-1.amazonaws.com/syncmeet:latest
+        run: docker run --env-file env.list -d -p 443:8080 --restart on-failure --name syncmeet 471112874945.dkr.ecr.eu-central-1.amazonaws.com/syncmeet:latest
