--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,10 +45,15 @@ jobs:
     runs-on: [ self-hosted ]
 
     steps:
+      - name: Configure AWS Credentials
+          uses: aws-actions/configure-aws-credentials@v4
+          with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: eu-central-1
+
       - name: Login to AWS ECR
         uses: aws-actions/amazon-ecr-login@v1
-        with:
-          region: eu-central-1
 
       - name: Pull Image from AWS ECR
         run: docker pull 471112874945.dkr.ecr.eu-central-1.amazonaws.com/syncmeet:latest
