--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,13 +13,16 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '18'
       - name: Install Dependencies
+        working-directory: ./frontend
         run: npm install
       - name: Build
+        working-directory: ./frontend
         run: npm run dist
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v1
+        working-directory: ./frontend
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: dist/*
