--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18'
-      - name: Change to frontend directory 
-        run: cd frontend
+      - name: List directory contents
+          run: ls -la
       - name: Install Dependencies
         run: npm install
       - name: Build
