--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Build
-        run: npm run dist
+        run: |
+         ls
+         npm run dist
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
