--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,11 +24,8 @@ jobs:
          npm run dist
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v1
-        run: |
-          ls
-          cd ./frontend
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: dist/*
+          files: frontent/dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
