--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: frontent/dist/*
+          files: frontend/dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
