feat/s3 bucket implementation

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=syncmeet
 server.port=${SERVER_PORT}
+
+# Swagger
 springdoc.swagger-ui.path=${SWAGGER_PATH}
 springdoc.paths-to-match=/api/**
+
+# Database
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.format_sql=true
+
+# AWS S3
+spring.cloud.aws.s3.region=eu-north-1
+aws.s3.bucket=syncmeet
